@@ -1,7 +1,9 @@
 2006-07-14 Joachim Noreiko <jnoreiko@yahoo.com>
 
   * C/figures/gedit_window.png: update screenshot for Clearlooks (taken on 2.14)
-	* C/gedit.xml: rewrite section on tabs
+	* C/gedit.xml: 
+	  rewrite section on tabs
+	  rewrite section on finding, added material on incremental search
 
 2006-07-13 Joachim Noreiko <jnoreiko@yahoo.com>
 
